# crafting-interpreters-workspace

./: README.md
clox/: CMakeLists.txt  chunk.c  chunk.h  common.h  compiler.c  debug.c  main.c  memory.c  memory.h  object.c  object.h  scanner.c  table.c  table.h  test.lox  value.c  value.h  vm.c  vm.h
examples/: main.lox
jlox/: Makefile  README.md  build  generate  run
jlox/src/com/craftinginterpreters/lox/: AstPrinter.java  Environment.java  Expr.java  Interpreter.java  Lox.java  LoxClass.java  LoxFunction.java  Parser.java  Resolver.java  Scanner.java  Stmt.java  Token.java
jlox/src/com/craftinginterpreters/tool/: GenerateAst.java
